name:                ioc-analyzer
version:             0.1.0.0
synopsis:            EPICS parser and analyzer
author:              UW PLSE
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

executable Main
  main-is:             Main.hs
  other-modules:       ExpParser, Lexer
  build-depends:
    base       >=4.9,
    containers >=0.5,
    array      >=0.5,
    ghc-prim   >=0.5,
    pretty     >=1.1,
    mtl        >=2.2.1,
    parsec     >=3.1.11,
    syb        >=0.6,
    random     >=1.1,
    lens       >=4.14
  build-tools:         alex
  default-language:    Haskell2010
